--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,18 @@ flutter:
     - asset/images/daily3-removebg-preview.png
     - asset/images/daily5-removebg-preview.png
     - asset/images/dalily6-removebg-preview.png
+    - asset/images/material1.jpg
+    - asset/images/material2.jpg
+    - asset/images/material3.jpg
+    - asset/images/top1.jpg
+    - asset/images/top2.jpg
+    - asset/images/top3.jpg
+    - asset/images/top4.jpg
+    - asset/images/kurta4-removebg-preview.png
+    - asset/images/kurta5-removebg-preview.png
+    - asset/images/kurta6-removebg-preview.png
+    - asset/images/kurta7-removebg-preview.png
+    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
