--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -118,6 +118,7 @@ flutter:
     - asset/frock/
     - asset/lahenga/
     - assets/animation/
+    - asset/images/Copy of DIL HAK_ (1).png
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
