--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1 
   google_fonts: ^6.2.1
   lottie: ^3.1.0
+  otp_text_field: ^1.1.3
 
 dev_dependencies:
   flutter_test:
@@ -119,6 +120,7 @@ flutter:
     - asset/lahenga/
     - assets/animation/
     - asset/images/Copy of DIL HAK_ (1).png
+    - asset/carousel/
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
