--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -110,6 +110,9 @@ flutter:
     - asset/images/lahenga2-removebg-preview.png
     - asset/images/lahenga3-removebg-preview.png
     - asset/images/lahenga4-removebg-preview.png
+    - asset/images/combo2.jpg
+    - asset/images/combo3.jpg
+    - asset/images/combo4.jpg
     - asset/saree/
     - asset/tops/
     - asset/cloth/
