--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_fonts: ^6.2.1
   lottie: ^3.1.0
   otp_text_field: ^1.1.3
+  animated_splash_screen: ^1.3.0
 
 dev_dependencies:
   flutter_test:
